[project]
name = "yielduq"
version = "0.1.0"
description = "Uncertainty-Aware Graph Neural Networks for Reaction Yield Prediction"
authors = [{ name = "Yuvraj Biswal" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "rdkit>=2025.9.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
]
